--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://matrix-ton-app.vercel.app",
   "name": "Matrix TON",
-  "iconUrl": "https://matrix-ton-app.vercel.app/favicon.ico"
+  "iconUrl": "https://matrix-ton-app.vercel.app/icon.png"
 }
