feat: TON Connect transaction for table purchase

--- a/.env.local
+++ b/.env.local
@@ -26,3 +26,4 @@ NEXT_PUBLIC_OPERATIONS_WALLET=UQDhUgP6FM3RWU-14GgQAT3LD5l9tlCOkNDuNv18guKAs2W6  
 INCOME_WALLET_PRIVATE_KEY=xxxxxxxxxx
 OPERATIONS_WALLET_PRIVATE_KEY=yyyyyyyyyy
 
+NEXT_PUBLIC_CONTRACT_ADDRESS=EQDjjT7CWLNL2_Kkd7aizOoFks5GJF696PjfSL_rz6ucAcrs
